--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "firebase-admin": "^13.5.0",
+    "fontkit": "^2.0.2",
     "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.10",
+    "pdfkit": "^0.13.0",
     "qrcode": "^1.5.4",
     "sharp": "^0.34.4",
+    "tslib": "^2.8.1",
     "uuid": "^13.0.0"
   }
 }
