--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "pdfkit": "^0.13.0",
     "qrcode": "^1.5.4",
     "sharp": "^0.34.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "tslib": "^2.8.1",
     "uuid": "^13.0.0"
   }
