--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fontkit": "^2.0.2",
     "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.10",
     "pdfkit": "^0.13.0",
