--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.10",
     "pdfkit": "^0.13.0",
+    "pdfkit-table": "^0.1.99",
     "qrcode": "^1.5.4",
     "sharp": "^0.34.4",
     "swagger-jsdoc": "^6.2.8",
