--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "mysql2": "^3.15.3",
+    "node-cron": "^4.2.1",
+    "node-schedule": "^2.1.1",
     "nodemon": "^3.1.10",
     "pdfkit": "^0.13.0",
     "pdfkit-table": "^0.1.99",
