--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "moment-timezone": "^0.6.0",
     "mysql2": "^3.15.3",
     "node-cron": "^4.2.1",
     "node-schedule": "^2.1.1",
