--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -72,7 +72,8 @@ jobs:
         run: npm install -g @railway/cli
 
       - name: Deploy to Railway
+        run: railway up --service smart-invites --detach --project $RAILWAY_PROJECT_ID
         env:
-          RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
-        run: railway up --service smart-invites --detach
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+          RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
 
