--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,12 +17,12 @@ jobs:
           MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQLPASSWORD }}
           MYSQL_DATABASE: ${{ secrets.MYSQLDATABASE }}
         ports:
-          - 3308:3306
+          - 3306:3306
         options: >-
-          --health-cmd="mysqladmin ping --silent"
+          --health-cmd="mysqladmin ping -h 127.0.0.1 -p${{ secrets.MYSQLPASSWORD }}"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=3
+          --health-retries=5
 
     steps:
       - name: Checkout repository
@@ -40,7 +40,7 @@ jobs:
         env:
           NODE_ENV: test
           MYSQL_HOST: 127.0.0.1
-          MYSQL_PORT: 3306
+          MYSQL_PORT: 3308
           MYSQL_USER: root
           MYSQL_PASSWORD: ${{ secrets.MYSQLPASSWORD }}
           MYSQL_DATABASE: ${{ secrets.MYSQLDATABASE }}
