--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,12 +17,12 @@ jobs:
           MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQLPASSWORD }}
           MYSQL_DATABASE: ${{ secrets.MYSQLDATABASE }}
         ports:
-          - 3308:3306
+          - 3306:3306
         options: >-
-          --health-cmd="mysqladmin ping -h 127.0.0.1 -p${{ secrets.MYSQLPASSWORD }}"
+          --health-cmd="mysqladmin ping --silent"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=5
+          --health-retries=3
 
     steps:
       - name: Checkout repository
