--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,10 @@ services:
     container_name: res-smart_invite_dev
     restart: always
     environment:
-        MYSQL_ROOT_PASSWORD: ${MYSQLROOTPASSWORD}
-        MYSQL_DATABASE: ${MYSQLDATABASE}
-        MYSQL_USER: ${MYSQLUSER}
-        MYSQL_PASSWORD: ${MYSQLPASSWORD}
+        MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+        MYSQL_DATABASE: ${MYSQL_DATABASE}
+        MYSQL_USER: ${MYSQL_USER}
+        MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     ports:
       - "3308:3306"
     networks:
@@ -25,8 +25,8 @@ services:
     container_name: res-smart_invite_prod
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQLROOTPASSWORD}
-      MYSQL_DATABASE: ${MYSQLDATABASE}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
     ports:
       - "3309:3306"
     networks:
